# claudio-os

./: .gitignore  CLAUDE.md  Cargo.toml  HANDOFF.md  README.md  run.ps1  x86_64-claudio.json
.cargo/: config.toml
.claude/: CHANNELS_SETUP.md  USAGE_NOTES.md  settings.local.json
.claude/hooks/: cargo-lock-changed.sh  cwd-changed.sh  task-completed-check.sh
.claude/skills/handoff/: SKILL.md
crates/acpi/src/: fadt.rs  power.rs  sdt.rs
crates/agent/src/: lib.rs
crates/ahci/: Cargo.toml
crates/ahci/src/: driver.rs  port.rs
crates/api-client/src/: messages.rs  streaming.rs  tools.rs
crates/asm-x86/: Cargo.toml
crates/asm-x86/src/: driver.rs  encoder.rs  lexer.rs  lib.rs  parser.rs  relocations.rs
crates/auth/src/: lib.rs
crates/bluetooth/: Cargo.toml
crates/bluetooth/src/: driver.rs  gap.rs  gatt.rs  hci.rs  hid.rs  l2cap.rs  lib.rs  usb_transport.rs
crates/btrfs/: Cargo.toml
crates/btrfs/src/: chunk.rs  crc32c.rs  dir.rs  extent.rs  inode.rs  item.rs  key.rs  lib.rs  readwrite.rs  superblock.rs  tree.rs
crates/cc-lite/: Cargo.toml
crates/cc-lite/src/: ast.rs  codegen.rs  driver.rs  lexer.rs  lib.rs  libc.rs  parser.rs  sema.rs
crates/cranelift-codegen-nostd/: Cargo.toml  build.rs
crates/cranelift-codegen-nostd/src/: alias_analysis.rs  context.rs  ctxhash.rs  data_value.rs  egraph.rs  float_compat.rs  fx.rs  incremental_cache.rs  isle_prelude.rs  lib.rs  loop_analysis.rs  opts.rs  remove_constant_phis.rs  result.rs  scoped_hash_map.rs  settings.rs  souper_harvest.rs  timing.rs  unionfind.rs
crates/cranelift-codegen-nostd/src/egraph/: elaborate.rs
crates/cranelift-codegen-nostd/src/ir/: condcodes.rs  constant.rs  extname.rs  immediates.rs  instructions.rs  jumptable.rs  pcc.rs
crates/cranelift-codegen-nostd/src/isa/: mod.rs  unwind.rs
crates/cranelift-codegen-nostd/src/isa/aarch64/: abi.rs  mod.rs
crates/cranelift-codegen-nostd/src/isa/pulley_shared/: abi.rs
crates/cranelift-codegen-nostd/src/isa/riscv64/: abi.rs  mod.rs
crates/cranelift-codegen-nostd/src/isa/s390x/: abi.rs  mod.rs
crates/cranelift-codegen-nostd/src/isa/unwind/: systemv.rs  winarm64.rs  winx64.rs
crates/cranelift-codegen-nostd/src/isa/x64/: abi.rs  (+1 more)
crates/cranelift-codegen-nostd/src/machinst/: abi.rs  blockorder.rs  buffer.rs  isle.rs  lower.rs  mod.rs  reg.rs  valueregs.rs  vcode.rs
crates/cranelift-codegen-nostd/src/verifier/: mod.rs
crates/cranelift-control-nostd/src/: lib.rs
crates/cranelift-frontend-nostd/: Cargo.toml
crates/cranelift-frontend-nostd/src/: frontend.rs  lib.rs  switch.rs
crates/cranelift-frontend-nostd/src/frontend/: safepoints.rs
crates/editor/: Cargo.toml
crates/editor/src/: lib.rs
crates/elf-loader/: Cargo.toml
crates/elf-loader/src/: lib.rs
crates/ext4/: Cargo.toml
crates/ext4/src/: lib.rs  readwrite.rs  superblock.rs
crates/fs-persist/: Cargo.toml
crates/fs-persist/src/: lib.rs
crates/hda/src/: driver.rs
crates/linux-compat/: Cargo.toml
crates/linux-compat/src/: lib.rs  misc_ops.rs  process_ops.rs  signal_ops.rs
crates/net/: Cargo.toml
crates/net/src/: lib.rs  nic.rs  tls.rs
crates/ntfs/: Cargo.toml
crates/ntfs/src/: compression.rs  lib.rs  readwrite.rs
crates/nvme/: Cargo.toml
crates/python-lite/: Cargo.toml
crates/python-lite/src/: lib.rs  parser.rs  tokenizer.rs
crates/shell/src/: lib.rs  shell.rs
crates/smp/src/: apic.rs
crates/sshd/: Cargo.toml
crates/sshd/src/: hostkey.rs  kex.rs  transport.rs
crates/terminal/: Cargo.toml
crates/terminal-ansi/: Cargo.toml
crates/terminal-ansi/src/: diff.rs  lib.rs
crates/terminal-core/: Cargo.toml
crates/terminal-core/src/: command.rs  input.rs  pane.rs
crates/terminal-fb/: Cargo.toml
crates/terminal-fb/src/: lib.rs  pane_renderer.rs  render.rs  terminus.rs
crates/terminal/src/: layout.rs  lib.rs  pane.rs  render.rs  unicode_font.rs
crates/usb-storage/: Cargo.toml
crates/usb-storage/src/: driver.rs  lib.rs
crates/vfs/src/: adapters.rs  lib.rs  memfs.rs
crates/vulkan/src/: instance.rs
crates/wifi/: Cargo.toml
crates/wifi/src/: firmware.rs  lib.rs  tx_rx.rs
crates/wraith-dom/: Cargo.toml
crates/wraith-dom/src/: lib.rs
crates/wraith-render/: Cargo.toml
crates/wraith-render/src/: lib.rs
crates/wraith-transport/: Cargo.toml
crates/wraith-transport/src/: lib.rs
crates/xhci/src/: context.rs  device.rs  driver.rs  lib.rs
docs/: AGENTS.md  GROWTH-STRATEGY.md  HARDWARE.md  OPEN-SOURCE-CRATES.md  ROADMAP.md  SHELL.md  WRAITH-BAREMETAL-PORT.md  WRAITH-CRATES-HANDOFF.md  api-protocol.md  architecture.md  building.md  contributing.md  cranelift-nostd-issue.md  kernel-internals.md  networking.md  terminal.md
docs/launch-posts/: hackernews-show-hn.md  reddit-r-linux.md  reddit-r-localllama.md  reddit-r-osdev.md  reddit-r-programming.md  reddit-r-rust.md  reddit-r-selfhosted.md
docs/superpowers/plans/: 2026-04-12-claudio-mux.md
docs/superpowers/specs/: 2026-04-11-claudio-mux-design.md
kernel/: Cargo.toml
kernel/src/: agent_loop.rs  agent_memory.rs  browser.rs  clipboard.rs  conversations.rs  cron.rs  csprng.rs  dashboard.rs  disks.rs  email.rs  encryption.rs  filemanager.rs  firewall.rs  framebuffer.rs  git.rs  image_viewer.rs  init.rs  interrupts.rs  keyboard.rs  linux_compat.rs  logger.rs  main.rs  manpages.rs  memory.rs  model_select.rs  nettools.rs  notifications.rs  ntp.rs  power.rs  screensaver.rs  search.rs  session_manager.rs  ssh_pipe.rs  ssh_server.rs  storage.rs  streaming.rs  swap.rs  terminal.rs  themes.rs  touchpad.rs  (+5 more)
site/: docs.html  index.html  style.css  vercel.json
site/blog/: building-os-in-rust-with-ai.html  index.html  linux-syscalls-on-bare-metal.html  post-quantum-ssh-from-scratch.html
tools/: build-server.py  export-gguf.py  fine-tune.py  notify-telegram.sh  test-model.py  training-watchdog.py
tools/claudio-mux/: Cargo.toml
tools/claudio-mux/.cargo/: config.toml
tools/claudio-mux/src/: app.rs  cli.rs  config.rs  host.rs  main.rs  pane_state.rs  render.rs  session.rs
tools/image-builder/: Cargo.toml
tools/image-builder/.cargo/: config.toml
tools/image-builder/src/: main.rs
(+25 files in other folders)
