[workspace]
resolver = "2"
members = [
    "kernel",
    "crates/terminal",
    "crates/net",
    "crates/api-client",
    "crates/auth",
    "crates/agent",
    "crates/fs-persist",
    "crates/wraith-transport",
    "crates/wraith-dom",
    "crates/wraith-render",
    "crates/editor",
    "crates/rustc-lite",
    "crates/python-lite",
    "crates/js-lite",
    "crates/ext4",
    "crates/btrfs",
    "crates/ntfs",
    "crates/ahci",
    "crates/nvme",
    "crates/intel-nic",
    "crates/acpi",
    "crates/hda",
    "crates/smp",
    "crates/xhci",
    "crates/gpu",
    "crates/sshd",
    "crates/vfs",
    "crates/shell",
    "crates/usb-storage",
    "crates/bluetooth",
    "crates/elf-loader",
    "crates/linux-compat",
    "crates/pe-loader",
    "crates/vulkan",
    "crates/win32",
    "crates/dxvk-bridge",
    "crates/dotnet-clr",
    "crates/winrt",
    "crates/cc-lite",
    "crates/asm-x86",
    "crates/wasm-runtime",
    "crates/lua-lite",
    "crates/go-lite",
    "crates/ts-lite",
    "crates/jvm-lite",
    "crates/cpp-lite",
    "crates/llm",
    "crates/terminal-core",
    "crates/terminal-fb",
]
exclude = [
    "tools/image-builder",  # Host-side tool, must NOT inherit x86_64-unknown-none target
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Matt Gates <ridgecellrepair@gmail.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/suhteevah/claudio-os"

[workspace.dependencies]
# Kernel foundations
x86_64 = "0.15"
bootloader_api = "0.11"
bootloader = "0.11"
linked_list_allocator = "0.10"
spin = "0.9"
log = "0.4"
conquer-once = { version = "0.4", default-features = false }

# Networking
smoltcp = { version = "0.12", default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "proto-dhcpv4",
    "proto-dns",
    "socket-tcp",
    "socket-udp",
    "socket-dhcpv4",
    "socket-dns",
    "alloc",
] }

# TLS / Crypto
embedded-tls = { version = "0.17", default-features = false }
embedded-io = "0.6"
rand_core = { version = "0.6", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["no_std"] }

# Terminal
vte = { version = "0.15", default-features = false }
noto-sans-mono-bitmap = "0.3"
pc-keyboard = "0.8"

# Filesystem
fatfs = { version = "0.3", default-features = false, features = ["alloc"] }

# Serialization (no_std JSON)
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "s"
strip = "debuginfo"
debug = 1

# Proc macros (serde_derive etc.) compile for the host — don't inject
# debug flags that need msvcrt.lib on Windows.
[profile.release.build-override]
debug = false
strip = true




[patch.crates-io]
cranelift-frontend = { path = "crates/cranelift-frontend-nostd" }
cranelift-codegen = { path = "crates/cranelift-codegen-nostd" }
cranelift-codegen-shared = { path = "crates/cranelift-codegen-shared-nostd" }
cranelift-control = { path = "crates/cranelift-control-nostd" }
arbitrary = { path = "crates/arbitrary-stub" }
rustc-hash = { path = "crates/rustc-hash-nostd" }
