[package]
name = "claudio-os"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bootloader_api = { workspace = true }
x86_64 = { workspace = true }
linked_list_allocator = { workspace = true }
spin = { workspace = true }
log = { workspace = true }
conquer-once = { workspace = true }
pc-keyboard = { workspace = true }
noto-sans-mono-bitmap = { workspace = true }
vte = { workspace = true }
serde_json = { workspace = true }

# Internal crates
claudio-terminal = { path = "../crates/terminal" }
claudio-net = { path = "../crates/net" }
claudio-api = { path = "../crates/api-client" }
claudio-auth = { path = "../crates/auth" }
claudio-agent = { path = "../crates/agent" }
claudio-fs = { path = "../crates/fs-persist" }
claudio-rustc = { path = "../crates/rustc-lite" }
wraith-dom = { path = "../crates/wraith-dom" }
