[package]
name = "claudio-os"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bootloader_api = { workspace = true }
x86_64 = { workspace = true }
linked_list_allocator = { workspace = true }
spin = { workspace = true }
log = { workspace = true }
conquer-once = { workspace = true }
pc-keyboard = { workspace = true }
vte = { workspace = true }
serde_json = { workspace = true }
smoltcp = { workspace = true }

# Internal crates
claudio-terminal = { path = "../crates/terminal" }
claudio-net = { path = "../crates/net" }
claudio-api = { path = "../crates/api-client" }
claudio-auth = { path = "../crates/auth" }
claudio-agent = { path = "../crates/agent" }
claudio-fs = { path = "../crates/fs-persist" }
claudio-rustc = { path = "../crates/rustc-lite" }
wraith-dom = { path = "../crates/wraith-dom" }
wraith-render = { path = "../crates/wraith-render" }
claudio-ext4 = { path = "../crates/ext4" }
claudio-btrfs = { path = "../crates/btrfs" }
claudio-ntfs = { path = "../crates/ntfs" }
claudio-ahci = { path = "../crates/ahci" }
claudio-nvme = { path = "../crates/nvme" }
claudio-intel-nic = { path = "../crates/intel-nic" }
claudio-acpi = { path = "../crates/acpi" }
claudio-hda = { path = "../crates/hda" }
claudio-smp = { path = "../crates/smp" }
claudio-xhci = { path = "../crates/xhci" }
claudio-gpu = { path = "../crates/gpu" }
claudio-sshd = { path = "../crates/sshd" }
claudio-vfs = { path = "../crates/vfs" }
claudio-shell = { path = "../crates/shell" }
claudio-usb-storage = { path = "../crates/usb-storage" }
claudio-bluetooth = { path = "../crates/bluetooth" }
claudio-elf-loader = { path = "../crates/elf-loader" }
claudio-linux-compat = { path = "../crates/linux-compat" }
claudio-pe-loader = { path = "../crates/pe-loader" }
claudio-vulkan = { path = "../crates/vulkan" }
claudio-win32 = { path = "../crates/win32" }
claudio-dxvk-bridge = { path = "../crates/dxvk-bridge" }
claudio-dotnet-clr = { path = "../crates/dotnet-clr" }
claudio-winrt = { path = "../crates/winrt" }
claudio-cc-lite = { path = "../crates/cc-lite" }
claudio-asm-x86 = { path = "../crates/asm-x86" }
