[package]
name = "claudio-image-builder"
version = "0.1.0"
edition = "2021"

# This is a HOST-side tool (runs on your dev machine, not bare-metal).
# It takes the compiled kernel binary and wraps it in a bootable UEFI disk image.

[dependencies]
# UEFI only — BIOS stages fail to build on Windows host (bootloader's
# build.rs panics in the cargo-install bootstrap of the
# bootloader-x86_64-bios-* crates), and CLAUDE.md only documents the
# UEFI/OVMF QEMU path anyway.
bootloader = { version = "0.11", default-features = false, features = ["uefi"] }
